--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <p><strong><a href="./recipes/roast-beef.html">Roast Beef</a></strong></p>
-        <p><strong><a href="./recipes/asian-pasta.html">Asian Pasta Salad</a></strong></p>
-        <p><strong><a href="./recipes/saigon-noodle.html">Saigon Noodle Salad</a></strong></p>
+        <h1 class="title">Odin Recipes</h1>
+        <div class="links">
+            <p><a href="./recipes/roast-beef.html">Roast Beef</a></p>
+            <p><a href="./recipes/asian-pasta.html">Asian Pasta Salad</a></p>
+            <p><a href="./recipes/saigon-noodle.html">Saigon Noodle Salad</a></p>
+        </div>
     </body>
 </html>
